# updaterexamples

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  allInOne.cpp  appUpdateSample_Linux.xml  appUpdateSample_MacOS.xml  appUpdateSample_Win.xml  before_script_win.ps1  main.cpp  pause_resume.cpp  script_win.ps1
installer/: insaller_cli.nsi
qml_example/: main.cpp  main.qml  qml_example.pro  updaterwrapper.cpp  updaterwrapper.h
